# admin_panel

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  run_uwsgi.sh
apps/movies/: admin.py  apps.py  models.py
apps/movies/api/: urls.py
apps/movies/api/v1/: views.py
apps/movies/filters/: decade_born_list_filter.py
apps/movies/locale/en/LC_MESSAGES/: django.po
apps/movies/locale/ru/LC_MESSAGES/: django.po
apps/movies/migrations/: 0001_initial.py  0002_third_task.py  0003_default_role.py  0004_add_indexes.py  0005_add_unique_constraints.py
config/: settings.py  urls.py
config/components/: database.py  installed_apps.py
nginx/: nginx.conf
nginx/conf.d/: admin.conf
uwsgi/: uwsgi.ini
